# RunAssistAI

./: .flake8  CMakeLists.txt  Dockerfile  GUI.py  Main.java  Main.py  README.md  api.py  fly.toml  home.py  requirements.txt  runtracker_tester.html  runtracker_tester_refactored.html  runtracker_tester_refactored_styles.css  services.py  simple_case.html  test2  test_Main.py  test_ccs_7.py  test_services.py  test_strava_cadence.py
RunAssistAi_demo/src/: CoreFacade.cpp  Domain.cpp  JsonUtil.cpp  LlamaWrapper.cpp  Prompt.cpp  main.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/components/: Card.tsx  CoachDashboard.tsx  Dashboard.tsx  LoginForm.tsx  RegisterForm.tsx  RunRecord.tsx  RunningPlan.tsx
runtrack/: api.py  config_loader.py  openai_config.example.json  openai_config.json  repository.py  services.py  strava_client.py  strava_config.example.json
templates/: home.html  logrun.html  viewstats.html
tests/: test_user_factory.py
